<resources>
    <string name="app_name">Darasa Student</string>
    <string name="content_decription">Default content description</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="already_have_account">Already have account</string>
    <string name="confirm_attendance">To confirm your class attendance scan the QR code on <b>Darasa Lec App</b></string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="invite_share">Share with Classmates</string>
    <string name="logout">Logout</string>

    <string name="dot">&#8226;</string>

    <string name="share_url">https://darasastudent.page.link/get</string>
    <string name="select_date">Select date</string>
    <string name="no_class_text">You\'ve no classes today. Take \na second to recharge</string>

    <string name="dev_email">developer.getabujob@gmail.com</string>
    <string name="dev_subject">Support Darasa Student App</string>
    <string name="save_class">Save Class</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="student_login">Student Login</string>
    <string name="student_signup">Student Registration</string>
    <string name="register">Register</string>

    <string name="content_desc_icon">password icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_us">Email us</string>
    <string name="huh_no_classes">Huh! No Classes</string>
    <string name="set_current_semester">Set current semester</string>
    <string name="select">Select</string>
    <string name="select_course">Select your course</string>
    <string name="manage_account">Manage Account</string>
    <string name="manage_your_account">Manage your Account</string>
    <string name="sign_out">Sign out</string>
    <string name="manage_your_classes">Manage your classes</string>
    <string name="semester_i_e_1">Semester e.g 1</string>
    <string name="academy_year">Academic Year e.g 2018/19</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="regno">Registration Number</string>
    <string name="school">School</string>
    <string name="department">Department</string>
    <string name="chooseEmailClient">Check Email</string>

    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="permission_rationale_location">Darasa would like to know your location</string>
    <string name="permission_location_denied_explanation">You have not granted location permission to Darasa</string>
    <string name="location">Location</string>

    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="your_offline">You\'re offline</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>

    <string name="add_ur_course">Add your Course</string>
    <string name="add_ur_sem">Add current Semester</string>
    <string name="add_ur_yr">Add study Year</string>
    <string name="add_ur_info">Add Student Profile</string>
    <string name="study_year">Study year e.g 1</string>

    <string name="start_scan">Start\nScan</string>
    <string name="scan_class">scanning\nClass</string>
    <string name="start_scanning_for_lec_txt">Tap Start Scan to\nStart scanning for lecturer inside the classroom</string>
    <string name="network_scanning_for_lec">Detecting active internet</string>
    <string name="netlost_scanning_for_lec_txt">Tap Retry to\nscan for lecturer inside the classroom</string>
    <string name="scanning_for_lec_txt">Scanning for lecturer inside the classroom</string>
    <string name="checking_for_lec_txt">Detecting lecturer inside the classroom</string>

    <string name="net_needed">Internet required inorder to broadcast lesson in the classroom</string>
    <string name="unit_code">Unit code</string>
    <string name="unit_name">Unit name</string>
    <string name="youre_offline">You\'re offline</string>
    <string name="scan_lec_qr">Scan Lec QR code</string>

    <string name="this_scan_qr_txt">This will open camera to scan <b>QR CODE</b> if you\'re unable to detect lecturer\'s network</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="dismiss">Dismiss</string>
</resources>
