<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.AccountSetupActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/setup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Toolbar"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        app:title="@string/register"
        app:titleTextColor="@android:color/white"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/setup_toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setup_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setup_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setup_regno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regno"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/setup_course_btn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@color/material_blue_grey_80"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/select_course"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/darkgreyish"
                android:textSize="18sp"
                app:backgroundTint="@color/contentDividerLine"
                app:icon="@drawable/ic_checklist"
                app:iconTint="@color/colorAccent"
                app:additionalPaddingRightForIcon="16dp"
                app:additionalPaddingLeftForIcon="4dp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setup_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:visibility="visible"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:hint="@string/select_course"
                    android:inputType="time"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setup_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/school"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setup_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="42dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <!-- request button -->
    <TextView
        android:id="@+id/setup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:focusable="true"
        android:clickable="true"
        />

</RelativeLayout>